# axuielement-rs

./: .gitignore  CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_axuielement_basic.rs  01_focused_window.rs  02_axobserver_basic.rs  02_children_and_actions.rs  03_axvalue_roundtrip.rs  04_axtextmarker_roundtrip.rs  05_axattribute_catalog.rs  06_axaction_catalog.rs  07_axnotification_catalog.rs  08_axerror_catalog.rs  09_system_wide_snapshot.rs  10_process_trust_status.rs  11_async_notification_stream.rs
src/: async_api.rs  ax_action.rs  ax_attribute.rs  ax_error.rs  ax_notification.rs  ax_observer.rs  ax_text_marker.rs  ax_ui_element.rs  ax_value.rs  error.rs  internal.rs  lib.rs  process_trust.rs  system_wide.rs
src/bridge/: ax_action.rs  ax_attribute.rs  ax_error.rs  ax_notification.rs  ax_observer.rs  ax_text_marker.rs  ax_ui_element.rs  ax_value.rs  mod.rs  process_trust.rs  system_wide.rs
src/element/: mod.rs
src/ffi/: mod.rs
src/observer/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/AXUIElementBridge/: AXAction.swift  AXAttribute.swift  AXError.swift  AXNotification.swift  AXObserver.swift  AXTextMarker.swift  AXUIElement.swift  AXValue.swift  ProcessTrust.swift  SystemWide.swift
tests/: api_coverage.rs  async_notification_stream_tests.rs  ax_action_tests.rs  ax_attribute_tests.rs  ax_error_tests.rs  ax_notification_tests.rs  ax_observer_tests.rs  ax_text_marker_tests.rs  ax_ui_element_tests.rs  ax_value_tests.rs  process_trust_tests.rs  system_wide_tests.rs
